---------------------------------------------------------------------------------------------------
Version: 1.7.6
Date: 2025-10-23
  Features:
    - Added option to enable arig and hyarion cargo drop, default is disable.
  Changes:
    - Arig crashes now can have construction robots
---------------------------------------------------------------------------------------------------
Version: 1.7.5
Date: 2025-10-22
  Changes:
    - Changed Quartz's graphics
  Compatibility:
    - Fixed error with Maraxis mod
    - Fixed hyper loader being too heavy for a rocket in aai loaders mod
    - Set lunar legacy as incompatible at the moment
  Bugfixes:
    - Fixed autoplace controls not having icons
---------------------------------------------------------------------------------------------------
Version: 1.7.4
Date: 2025-10-19
  Features:
    - Added logistics containers
  Changes:
    - Changed graphics of the container
  Optimizations:
    - Optimized graphics
  Compatibility:
    - Added compatibility with aai loaders sane mod
    - Fixed error using resin in the wood industry mod
---------------------------------------------------------------------------------------------------
Version: 1.7.3
Date: 2025-10-18
  Changes:
    - Hyper belts now uses polished quartz instead of lubricant and its unlocked after polishing technology
  Compatibility:
    - Fixed crash with Krastorio 2
---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 2025-10-16
  Bugfixes:
    - Fixed circular dependencies
---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 2025-10-16
  Features:
    - Added Cactus and Cactus wood
  Changes:
    - Change hyper underground belt distance 11 -> 15
    - Made quartz furnace 50% faster than stone furnace
    - Rearranged hyarion recipes
  Compatibility:
    - Added Hyarion compatibility for the celestial weather mod