@@ -395,7 +395,6 @@ simulation-genius-3=Produce 5000 simulating units
 
 [mod-setting-name]
 enable-arig-cargo-drops=Enable Arig cargo drops
-enable-hyarion-cargo-drops=Enable Hyarion cargo drops
 
 enable-arig-weather=Enable Arig weather
 arig_sand_particle-speed=Arig sand particle speed
